Fixed cursor for expand/collapse button

--- a/src/components/metadata/styles/metadata.scss
+++ b/src/components/metadata/styles/metadata.scss
@@ -276,6 +276,7 @@ $list-inline-spacing: 0.2em;
   flex-direction: row;
   list-style: none;
   background-color: var(--color-button-plot);
+  cursor: default;
 
   &:hover {
     background-color: var(--color-button-plot-hovered);
