--- a/src/components/plotly-modal/plotly-modal.scss
+++ b/src/components/plotly-modal/plotly-modal.scss
@@ -98,6 +98,7 @@
   width: $metadata-sidebar-width-open;
   list-style: none;
   background-color: var(--color-button-plot);
+  cursor: default;
 
   &:hover {
     background-color: var(--color-button-plot-hovered);
